[gd_scene load_steps=13 format=3 uid="uid://c37y4flf85dai"]

[ext_resource type="Script" uid="uid://bnovh1ifk4m3l" path="res://Scenes/TelaGaragem.gd" id="1_2cd46"]
[ext_resource type="Texture2D" uid="uid://dgn1jdoeket40" path="res://Assets/Screen/Seletor de mapa.png" id="1_8aopf"]
[ext_resource type="Texture2D" uid="uid://bgaw7pfcecq4p" path="res://Assets/Screen/buttons/configCarro.svg" id="2_h4gu7"]
[ext_resource type="Texture2D" uid="uid://jouoo75o4xr1" path="res://Assets/Screen/buttons/Frame nome carro.svg" id="3_0l52s"]
[ext_resource type="Texture2D" uid="uid://dgmw7gvdorp2o" path="res://Assets/Screen/buttons/moeda_texture.png" id="4_8yy60"]
[ext_resource type="Texture2D" uid="uid://cxj70va86407i" path="res://Assets/Screen/buttons/back_button.svg" id="5_2j7px"]
[ext_resource type="Texture2D" uid="uid://cpwxk65gkfoc8" path="res://Assets/Screen/popup_config.png" id="6_5ddpr"]
[ext_resource type="Texture2D" uid="uid://d0ge12olhteni" path="res://Assets/Screen/buttons/sairpopup_button.png" id="7_hdh7l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i1i82"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uykx4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_06mj5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d0lt7"]
texture = ExtResource("6_5ddpr")

[node name="TelaLoja" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2cd46")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_8aopf")
expand_mode = 1

[node name="StatusCompraLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 491.0
offset_top = 456.0
offset_right = 661.0
offset_bottom = 479.0
text = "Status compra"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConfigCarro" type="Sprite2D" parent="."]
position = Vector2(837.271, 577.438)
scale = Vector2(0.174664, 0.174664)
texture = ExtResource("2_h4gu7")

[node name="ComprarButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = 99.5
offset_right = 38.5
offset_bottom = 130.5
grow_horizontal = 2
grow_vertical = 2
text = "Comprar"
icon_alignment = 1

[node name="ResistenciaBar" type="ProgressBar" parent="."]
layout_mode = 2
offset_left = 832.0
offset_top = 612.0
offset_right = 1128.0
offset_bottom = 639.0

[node name="VelocidadeBar" type="ProgressBar" parent="."]
layout_mode = 2
offset_left = 832.0
offset_top = 516.0
offset_right = 1128.0
offset_bottom = 543.0

[node name="FrenagemBar" type="ProgressBar" parent="."]
layout_mode = 2
offset_left = 832.0
offset_top = 548.0
offset_right = 1128.0
offset_bottom = 575.0

[node name="PesoBar" type="ProgressBar" parent="."]
layout_mode = 2
offset_left = 832.0
offset_top = 580.0
offset_right = 1128.0
offset_bottom = 607.0

[node name="Velocidade" type="Label" parent="."]
layout_mode = 2
offset_left = 640.0
offset_top = 517.0
offset_right = 832.0
offset_bottom = 540.0
text = "Velocidade"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Frenagem" type="Label" parent="."]
layout_mode = 2
offset_left = 640.0
offset_top = 549.0
offset_right = 832.0
offset_bottom = 572.0
text = "Frenagem"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Peso" type="Label" parent="."]
layout_mode = 2
offset_left = 640.0
offset_top = 581.0
offset_right = 832.0
offset_bottom = 604.0
text = "Peso"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resistencia" type="Label" parent="."]
layout_mode = 2
offset_left = 640.0
offset_top = 613.0
offset_right = 832.0
offset_bottom = 636.0
text = "Resistencia"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SetaEsquerdaButton" type="Button" parent="."]
layout_mode = 2
offset_left = 190.0
offset_top = 266.0
offset_right = 212.0
offset_bottom = 306.0
text = "<"

[node name="SetaDireitaButton" type="Button" parent="."]
layout_mode = 2
offset_left = 937.0
offset_top = 266.0
offset_right = 959.0
offset_bottom = 306.0
text = ">"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 525.0
offset_right = 486.0
offset_bottom = 611.0
texture = ExtResource("3_0l52s")
expand_mode = 1

[node name="NomeCarroLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 529.0
offset_right = -670.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Nome carro"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Carro" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 232.0
offset_top = 192.0
offset_right = 912.0
offset_bottom = 392.0
expand_mode = 1

[node name="MoedaIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 956.0
offset_top = 63.0
offset_right = 1157.0
offset_bottom = 113.0
texture = ExtResource("4_8yy60")
expand_mode = 1

[node name="DinheiroLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1010.0
offset_top = 74.0
offset_right = 1135.0
offset_bottom = 102.0
vertical_alignment = 1

[node name="VoltarButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -8.08
anchor_top = -2.643
anchor_right = -8.08
anchor_bottom = -2.643
offset_left = 9308.16
offset_top = 1768.66
offset_right = 9468.16
offset_bottom = 1832.66
theme_override_styles/hover = SubResource("StyleBoxEmpty_i1i82")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_uykx4")
theme_override_styles/normal = SubResource("StyleBoxEmpty_06mj5")
icon = ExtResource("5_2j7px")
expand_icon = true

[node name="ConfigPopupLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="ConfigPopupLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -575.0
offset_top = -325.0
offset_right = 579.0
offset_bottom = 326.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.701961)

[node name="Panel" type="Panel" parent="ConfigPopupLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -258.0
offset_top = -140.0
offset_right = 258.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_d0lt7")

[node name="Label" type="Label" parent="ConfigPopupLayer/Panel"]
layout_mode = 0
offset_left = 154.0
offset_top = 61.0
offset_right = 367.0
offset_bottom = 81.0
text = "Atenção"
horizontal_alignment = 1

[node name="FecharButton" type="TextureButton" parent="ConfigPopupLayer/Panel"]
layout_mode = 0
offset_left = 473.0
offset_top = -20.0
offset_right = 818.0
offset_bottom = 323.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("7_hdh7l")

[node name="ErrorMessage" type="Label" parent="ConfigPopupLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.5
offset_top = -11.5
offset_right = 106.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "err_message"
horizontal_alignment = 1
vertical_alignment = 1
